вносит поправки в пути файлов

--- a/src/task-06.html
+++ b/src/task-06.html
@@ -34,7 +34,7 @@
 
     <input type="text" id="validation-input" data-length="6" placeholder="Введи 6 символов" />
 
-    <script src="js/task-06.js" type="module"></script>
+    <script src="./js/task-06.js" type="module"></script>
 </body>
 
 </html>
