--- a/src/task-01.html
+++ b/src/task-01.html
@@ -53,7 +53,7 @@
         </li>
     </ul>
 
-    <script src="js/task-01.js" type="module"></script>
+    <script src="./js/task-01.js" type="module"></script>
 </body>
 
 </html>
