--- a/src/task-05.html
+++ b/src/task-05.html
@@ -23,7 +23,7 @@
     <input type="text" placeholder="Ваше имя?" id="name-input" />
     <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <script src="js/task-05.js" type="module"></script>
+    <script src="./js/task-05.js" type="module"></script>
 </body>
 
 </html>
