--- a/src/task-07.html
+++ b/src/task-07.html
@@ -24,7 +24,7 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <script src="js/task-07.js" type="module"></script>
+    <script src="./js/task-07.js" type="module"></script>
 </body>
 
 </html>
