--- a/src/task-03.html
+++ b/src/task-03.html
@@ -22,7 +22,7 @@
 
     <ul id="gallery"></ul>
 
-    <script src="./js/task-03.js" type="module"></script>
+    <script src="/src/js/task-03.js" type="module"></script>
 </body>
 
 </html>
