--- a/src/task-04.html
+++ b/src/task-04.html
@@ -26,7 +26,7 @@
         <button type="button" data-action="increment">+1</button>
     </div>
 
-    <script src="./js/task-04.js" type="module"></script>
+    <script src="/src/js/task-04.js" type="module"></script>
 </body>
 
 </html>
