--- a/task-04.html
+++ b/task-04.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Задание 3</title>
+    <title>Задание 4</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
@@ -20,9 +20,13 @@
 <body>
     <p><a href="index.html">На главную</a></p>
 
-    <ul id="gallery"></ul>
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
 
-    <script src="/src/js/task-03.js" type="module"></script>
+    <script src="./js/task-04.js" type="module"></script>
 </body>
 
 </html>
