--- a/task-03.html
+++ b/task-03.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="./index.html">На главную</a></p>
 
     <ul id="gallery"></ul>
 
-    <script src="./js/tasjsk-03." type="module"></script>
+    <script src="/js/task-03.js" type="module"></script>
 </body>
 
 </html>
